<resources>
    <string name="app_name">NoteMHA</string>
    <string name="title_record">Record</string>
    <string name="title_list">Listing</string>
    <string name="title_detail">Record Detail</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="IncompleteFields">Please Fill in All Fields</string>
    <string name="InvalidCredentials">Incorrect Credentials</string>

    <string name="file_name">File Name</string>
    <string name="note">Note</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="pause">Pause</string>
    <string name="save">Save</string>

    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>

    <string name="error_permission">Recording Feature is Disabled</string>
    <string name="overwrite_recording">Overwrite Recording</string>
    <string name="overwrite_recording_msg">There is an existing recording. Do you wish to overwrite it?</string>

</resources>